--- a/package.json
+++ b/package.json
@@ -3,21 +3,60 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
+    "lint": "next lint",
+    "postinstall": "prisma generate",
+    "dev": "next dev --turbo",
+    "email": "email dev",
+    "build": "prisma generate && next build",
     "start": "next start",
-    "lint": "next lint"
+    "generate": "prisma generate"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.2.1"
+    "@arcjet/inspect": "^1.0.0-beta.8",
+    "@arcjet/next": "^1.0.0-beta.8",
+    "@clerk/nextjs": "^6.12.4",
+    "@google/generative-ai": "^0.24.1",
+    "@hookform/resolvers": "^5.0.1",
+    "@prisma/client": "^6.9.0",
+    "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-progress": "^1.1.2",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-switch": "^1.1.3",
+    "@radix-ui/react-tooltip": "^1.2.7",
+    "@react-email/components": "^0.0.41",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "embla-carousel-react": "^8.6.0",
+    "inngest": "^3.39.0",
+    "lucide-react": "^0.479.0",
+    "next": "^15.1.0",
+    "react": "19.1.0",
+    "react-day-picker": "^8.10.1",
+    "react-dom": "19.1.0",
+    "react-hook-form": "^7.55.0",
+    "react-spinners": "^0.16.1",
+    "recharts": "^2.15.3",
+    "resend": "^4.5.2",
+    "sonner": "^2.0.3",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.2",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.2.1",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8.5.3",
+    "prisma": "^6.9.0",
+    "react-email": "4.0.16",
+    "tailwindcss": "^4.0.14"
   }
 }
