--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-spinners": "^0.16.1",
     "recharts": "^2.15.3",
     "resend": "^4.5.2",
+    "serialize-error-cjs": "^0.2.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
